--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "11.11.0",
     "@mui/icons-material": "5.14.7",
     "@mui/material": "5.14.7",
+    "@wavesurfer/react": "^1.0.11",
     "next": "13.4.19",
     "query-string": "8.1.0",
     "react": "18.2.0",
@@ -24,7 +25,7 @@
     "react-h5-audio-player": "3.8.6",
     "react-slick": "0.29.0",
     "slick-carousel": "1.8.1",
-    "wavesurfer.js": "7.3.1"
+    "wavesurfer.js": "^7.9.4"
   },
   "devDependencies": {
     "@types/node": "20.5.9",
